# energiewirtschaft-next

./: .gitignore  .project.toml  Cargo.toml  deploy.sh  ewn.service.in
.claude/memory/: MEMORY.md  feedback_save_all_artifacts.md  feedback_theme_support.md  feedback_use_real_engine.md  project_mako_engine.md  user_domain_knowledge.md
docs/: anleitung.md  checkliste_mako_kommunikationslinien(2).md  checkliste_mako_kommunikationslinien.md  checkliste_mako_kommunikationslinien_gas.md  checkliste_testkorpus_mako.md  mako_engine_gesamtdokumentation.md  referenz_bundesnetzagentur.md  referenz_energiewirtschaft_einfach.md  zeitplan_marktkommunikation.md
docs/claude-recherche/: glossar_energiewirtschaft.md  mako_formatvorlagen_referenz.md  recherche_gleichgesinnte_projekte.md
docs/superpowers/plans/: 2026-03-24-mako-foundation.md  2026-03-25-mako-simulator.md  2026-03-25-testkorpus-codec.md  2026-03-28-verification-system.md
docs/superpowers/specs/: 2026-03-24-mako-engine-design.md  2026-03-25-mako-simulator-design.md  2026-03-25-testkorpus-codec-design.md  2026-03-28-verification-system-design.md
mako-14a/: Cargo.toml
mako-14a/src/v2025/: katalog.rs  mod.rs  rollen.rs  steuerung.rs  steuerung_tests.rs
mako-abrechnung/: Cargo.toml
mako-abrechnung/src/v2025/: katalog.rs  mod.rs  netznutzung.rs  netznutzung_tests.rs  rollen.rs
mako-cli/: Cargo.toml
mako-cli/src/: erstelle_nachricht.rs  event_mapping.rs  init.rs  lib.rs  main.rs  prozesse_json.rs  schema_json.rs  sende.rs  state_store.rs  status.rs  verarbeite.rs  verifiziere.rs  verifiziere_batch.rs
mako-codec/: Cargo.toml
mako-codec/src/: fehler.rs  lib.rs
mako-codec/src/edifact/: bdew_segmente.rs  dispatch.rs  mod.rs  parser.rs  segment.rs  serializer.rs
mako-codec/src/json/: mod.rs  nachricht_json.rs
mako-codec/src/xml/: parser.rs  serializer.rs
mako-fristen/: Cargo.toml
mako-fristen/src/: feiertage.rs  frist.rs  lib.rs  zeitmodell.rs
mako-gabi/: Cargo.toml
mako-gabi/src/v2025/: bilanzierungsdaten.rs  bilanzierungsdaten_tests.rs  bilanzkreiszuordnung.rs  bilanzkreiszuordnung_tests.rs  clearing.rs  clearing_tests.rs  katalog.rs  mehrmindermengen.rs  mehrmindermengen_tests.rs  mod.rs  nominierung.rs  nominierung_tests.rs  rollen.rs
mako-gasumrechnung/: Cargo.toml
mako-gasumrechnung/src/: lib.rs
mako-geli/: Cargo.toml
mako-geli/src/: lib.rs
mako-geli/src/v2020/: lfw.rs  lfw_tests.rs
mako-geli/src/v2025/: gda.rs  gda_tests.rs  katalog.rs  lfw.rs  lfw_tests.rs  lieferende.rs  lieferende_tests.rs  mod.rs  rollen.rs  stammdaten.rs  stammdaten_tests.rs  zuordnung.rs  zuordnung_tests.rs
mako-gpke/: Cargo.toml
mako-gpke/src/: lib.rs
mako-gpke/src/v2017/: lfw.rs  lfw_tests.rs
mako-gpke/src/v2020/: lfw.rs  lfw_tests.rs
mako-gpke/src/v2022/: lfw.rs  lfw_tests.rs  mod.rs
mako-gpke/src/v2025/: gda.rs  gda_tests.rs  katalog.rs  lfw.rs  lfw_tests.rs  lieferende.rs  lieferende_tests.rs  mod.rs  rollen.rs  stammdaten.rs  stammdaten_tests.rs  zuordnung.rs  zuordnung_tests.rs
mako-gpke/tests/: integration.rs
mako-katalog/: Cargo.toml
mako-katalog/src/: lib.rs
mako-kov/: Cargo.toml
mako-kov/src/v2025/: ausspeisepunkt.rs  ausspeisepunkt_tests.rs  brennwert.rs  brennwert_tests.rs  kapazitaet.rs  kapazitaet_tests.rs  katalog.rs  (+4 more)
mako-mabis/: Cargo.toml
mako-mabis/src/: lib.rs
mako-mabis/src/v2020/: bilanzkreiszuordnung.rs  bilanzkreiszuordnung_tests.rs  mod.rs
mako-mabis/src/v2022/: bilanzkreiszuordnung.rs  bilanzkreiszuordnung_tests.rs
mako-mabis/src/v2025/: bilanzierungsdaten.rs  bilanzierungsdaten_tests.rs  bilanzkreiszuordnung.rs  bilanzkreiszuordnung_tests.rs  clearing.rs  clearing_tests.rs  katalog.rs  mehrmindermengen.rs  mehrmindermengen_tests.rs  mod.rs  rollen.rs
mako-mpes/: Cargo.toml
mako-mpes/src/: lib.rs
mako-quittung/: Cargo.toml
mako-quittung/src/: acknowledgement.rs  aperak.rs  contrl.rs  decorator.rs  lib.rs  types.rs
mako-rd2/: Cargo.toml
mako-sim/: Cargo.toml
mako-sim/src/: agent.rs  lib.rs  markt.rs
mako-testdata/: Cargo.toml
mako-testdata/src/: fehler.rs  ids.rs  ketten.rs  lib.rs  mscons.rs  quittungen.rs  szenarien.rs  szenarien_historisch.rs  utilmd.rs
mako-testdata/src/fixtures/: aperak.rs  contrl.rs  iftsta.rs  invoic.rs  mod.rs  mscons.rs  orders.rs  ordrsp.rs  partin.rs  pricat.rs  quotes.rs  remadv.rs  reqote.rs  utilmd.rs  utilts.rs
mako-testdata/src/fixtures/xml/: acknowledgement.rs  activation.rs  engpass.rs  fahrplan.rs  kaskade.rs  kostenblatt.rs  mod.rs  nichtverfuegbarkeit.rs  stammdaten.rs  statusrequest.rs
mako-testdata/src/generator/: edifact.rs  mod.rs  params.rs  segmente.rs
mako-types/: Cargo.toml
mako-types/src/: ahb.rs  ebd.rs  fehler.rs  gpke_nachrichten.rs  ids.rs  katalog.rs  lib.rs  nachricht.rs  pruefidentifikator.rs  querschnitt.rs  rd2_quittung.rs  reducer.rs  rolle.rs  sparte.rs  version.rs
mako-types/tests/: ahb_tests.rs  ebd_tests.rs
mako-ubp/: Cargo.toml
mako-ui/: .gitignore  biome.json  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.server.json  vite.config.ts
mako-ui/src/: App.tsx  index.css  main.tsx
mako-verify/: Cargo.toml
mako-verify/src/: ahb.rs  ahb_ausdruck.rs  bericht.rs  ebd.rs  interop.rs  lib.rs  referenzdaten.rs
mako-verify/tests/: ahb_tests.rs  bericht_tests.rs  ebd_tests.rs  interop_tests.rs  lib_tests.rs
mako-wim/: Cargo.toml
(+66 files in other folders)
