[workspace]
resolver = "2"
members = [
	"mako-types",
	"mako-fristen",
	"mako-quittung",
	"mako-gpke",
	"mako-wim",
	"mako-ubp",
	"mako-mabis",
	"mako-abrechnung",
	"mako-testdata",
	"mako-mpes",
	"mako-rd2",
	"mako-14a",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/felixfoertsch/energiewirtschaft-next"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
