[package]
name = "mako-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
mako-types = { path = "../mako-types" }
mako-codec = { path = "../mako-codec" }
mako-quittung = { path = "../mako-quittung" }
mako-fristen = { path = "../mako-fristen" }
mako-gpke = { path = "../mako-gpke" }
mako-wim = { path = "../mako-wim" }
mako-ubp = { path = "../mako-ubp" }
mako-mabis = { path = "../mako-mabis" }
mako-abrechnung = { path = "../mako-abrechnung" }
mako-mpes = { path = "../mako-mpes" }
mako-rd2 = { path = "../mako-rd2" }
mako-14a = { path = "../mako-14a" }
mako-geli = { path = "../mako-geli" }
mako-gabi = { path = "../mako-gabi" }
mako-kov = { path = "../mako-kov" }
mako-gasumrechnung = { path = "../mako-gasumrechnung" }
