[package]
name = "mako-katalog"
version = "0.1.0"
edition.workspace = true

[dependencies]
mako-types = { path = "../mako-types" }
mako-gpke = { path = "../mako-gpke" }
mako-geli = { path = "../mako-geli" }
mako-wim = { path = "../mako-wim" }
mako-mabis = { path = "../mako-mabis" }
mako-gabi = { path = "../mako-gabi" }
mako-ubp = { path = "../mako-ubp" }
mako-abrechnung = { path = "../mako-abrechnung" }
mako-kov = { path = "../mako-kov" }
mako-rd2 = { path = "../mako-rd2" }
mako-mpes = { path = "../mako-mpes" }
mako-14a = { path = "../mako-14a" }
serde = { workspace = true }
serde_json = { workspace = true }
