[package]
name = "mako-sim"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true }
mako-types = { path = "../mako-types" }
mako-fristen = { path = "../mako-fristen" }
mako-quittung = { path = "../mako-quittung" }
mako-gpke = { path = "../mako-gpke" }
mako-wim = { path = "../mako-wim" }
mako-mabis = { path = "../mako-mabis" }
mako-ubp = { path = "../mako-ubp" }
mako-mpes = { path = "../mako-mpes" }
mako-rd2 = { path = "../mako-rd2" }
mako-14a = { path = "../mako-14a" }
mako-geli = { path = "../mako-geli" }
mako-gabi = { path = "../mako-gabi" }
mako-kov = { path = "../mako-kov" }
mako-abrechnung = { path = "../mako-abrechnung" }
mako-gasumrechnung = { path = "../mako-gasumrechnung" }

[dev-dependencies]
mako-testdata = { path = "../mako-testdata" }
