[package]
name = "mako-testdata"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true }
mako-types = { path = "../mako-types" }
mako-fristen = { path = "../mako-fristen" }
mako-gpke = { path = "../mako-gpke" }
mako-wim = { path = "../mako-wim" }
mako-mabis = { path = "../mako-mabis" }
mako-geli = { path = "../mako-geli" }
